force-app/main/default/objects/Room_Type__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <label>Feature</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>tv</fullName>
            </value>
            <value>
                <fullName>jakuzi</fullName>
            </value>
            <value>
                <fullName>klima</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>