force-app/main/default/objects/Room_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Price__c</columns>
    <columns>Feature__c</columns>
    <columns>Class__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>